--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,29 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-inter: var(--font-inter);
+  --font-work-sans: var(--font-work-sans);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme {
+  --color-my-white-50: #ffffff;
+  --color-my-white-100: #efefef;
+  --color-my-white-200: #dcdcdc;
+  --color-my-white-300: #bdbdbd;
+  --color-my-white-400: #989898;
+  --color-my-white-500: #7c7c7c;
+  --color-my-white-600: #656565;
+  --color-my-white-700: #525252;
+  --color-my-white-800: #464646;
+  --color-my-white-900: #3d3d3d;
+  --color-my-white-950: #292929;
+
+  --breakpoint-lg-16: 65rem;
+  --breakpoint-960px: 60rem;
+  --breakpoint-900px: 56.25rem;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
