on the course page

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@
 
   --breakpoint-lg-16: 65rem;
   --breakpoint-830px: 51.875rem;
+  --breakpoint-930px: 58.125rem;
   --breakpoint-960px: 60rem;
   --breakpoint-990px: 61.875rem;
 }
